--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,7 +1,7 @@
 
-.left{
- border-style: solid;
-	border-width: 2px;
+.SEARCH_left{
+    border-style: solid;
+	  border-width: 2px;
     border-color: rgb(150,150,150);
     margin:5px;
 }
