--- a/app/views/main/search.html.erb
+++ b/app/views/main/search.html.erb
@@ -17,7 +17,7 @@ nav{
   
   <div class="grid_4">
     
-    <div class="left">
+    <div class="SEARCH_left">
     <div class="SEARCH_Search">
       <p><h2>SEARCH</h2></p>
     <div>
