--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -69,6 +69,7 @@ h1{
   margin: 0 10px 10px 0;
   text-decoration: none;
   -webkit-transition: color 0.2s;
+  font-size: 15px;
 }
 
 .tag::before {
@@ -102,3 +103,18 @@ h1{
 .tag:hover::after {
    border-left-color: crimson; 
 }
+
+
+
+  /* RESPONSIVE
+  -------------------------------------------------- */
+
+
+@media (max-width: 1024px) {
+    .tag {font-size: 11px; height: 80%; }
+}
+
+@media (max-width: 768px) {
+    .conference-title {font-size: 14px;}
+}
+
